/// Type: Protocol layer definitions

syntax = "proto3";
package dvote.types.v2;

option go_package = "go.vocdoni.io/proto/build/go/models/v2";

///////////////////////////////////////////////////////////////////////////////
// Organization
///////////////////////////////////////////////////////////////////////////////

message Organization {
	string metadataUri = 1;
	repeated bytes managers = 2;   // Future
}
